# ripl

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.old  CHANGELOG.md  CMakeLists.txt  CMakeLists_old.txt  README.md  appveyor.yml  build  config.h.in
examples/: README.md  noise.cpp  sine.cpp  wavelet2.cpp  wavelet5.cpp  wavelet8.cpp
scratch/: globalhe.cmd  nop.cmd
script/: run-app  run-check  run-cmake  run-cmake.cmd  run-make  run-unittest  run-valgrind
src/: config.h.in  readme.txt
src/BC4/: CLEAN.BAT
src/EXAMPLES/: ARSE  HAAR1.C  HIST.C  INFO.TXT  NOISE.C  WAVELET3.C  WAVELET6.C  WAVELET7.C
src/HP-UX/: INSTALL  MAKEFILE.2
src/OPLIB/: ADD.C  ADD.H  AHE.H  BINMORPH.C  BINMORPH.H  CARVE.H  CONV.C  DLLCONV.H  FFTFILT.C  FFTFILT.H  GAUSS.C  GAUSS.H  GLMORPH.H  INFO.TXT  MAGSYNTH.C  MARRHILD.C  MARRHILD.H  MASK.C  MASK.H  MISC.H  PLANE.C  PLANE.H  SOBEL.H  SPECTRUM.C  SPECTRUM.H  TEST.C  WMRA.C  WVTHRSH.H
src/RIPLCMD/: RIPLCMD.C
src/RIPLMAIN/: INFO.TXT  RIPL.H  RIPLALLC.H  RIPLMISC.H  RIPLMSG.C  RIPLPARS.H  RIPLRGB.H
src/RIPLOP/: INFO.TXT  RIPLENTR.C  RIPLOP.C  RIPLREG.C
src/RIPLTOOL/: INFO.TXT  RIPLFFT.C  RIPLRAND.H  RIPLTDFS.H  RIPLWAVE.C  RIPLWAVE.H
src/RIPLWIN/: INFO.TXT
src/TCLDLL/: RIPLLB.TCL  RIPLMAIN.TCL  TCLDLL.C  TCLDLL.H  TCLMSG.C
src/WATCOM/: CLEAN.BAT  INSTALL.BAT  PKGINDEX.TCL  RIPL.TGT  RIPLDLL.TGT  RIPLTOOL.TGT  RIPLWIN.TGT
src/app/: targets.cmake
src/app/main/: Op.h  PluginManager.cpp  PluginManager.h  RegistrarImpl.cpp  RegistrarImpl.h  RegistryImpl.cpp  RegistryImpl.h  main.cpp
src/app/test/: OpTest.cpp
src/bc4/: INSTALL.BAT  ripl.ide
src/examples/: SINE.C  WAVELET5.C  haar1.c  haar2.c  haar2.cpp  hist.c  matrix.c  noise.c  sine.c  wavelet.c  wavelet2.c  wavelet3.c  wavelet3.cpp  wavelet4.c  wavelet5.c  wavelet6.c  wavelet7.c  wavelet7.cpp  wavelet8.c
src/hp-ux/: MAKEFILE.1  MAKEMAKE
src/importresources/: targets.cmake
src/importresources/main/: main.cpp
src/interfacelib/: targets.cmake
src/interfacelib/main/: Registrar.cpp
src/interfacelib/public/interfacelib/: OpFunc.h  Registrar.h  defs.h
src/interfacelib/test/: OpFuncTest.cpp  RegistrarTest.cpp
src/oplib/: CARVE.C  CONV.H  MAGSYNTH.H  MEDIAN.H  PHSYNTH.C  PHSYNTH.H  README.md  SIAHE2.C  TEST.H  THRESH.H  WVTHRSH.C  add.c  add.cpp  add.h  ahe.c  ahe.cpp  ahe.h  binmorph.c  binmorph.cpp  binmorph.h  carve.c  carve.cpp  carve.h  conv.c  conv.cpp  conv.h  dllconv.c  dllconv.cpp  dllconv.h  fftfilt.c  fftfilt.cpp  fftfilt.h  gauss.c  gauss.cpp  gauss.h  glmorph.c  glmorph.cpp  glmorph.h  globalhe.c  globalhe.cpp  (+55 more)
src/oplib/main/: add.cpp  add.h  ahe.cpp  ahe.h  alloc.h  binmorph.cpp  carve.cpp  carve.h  conv.cpp  dllconv.cpp  fftfilt.cpp  fftfilt.h  gauss.cpp  glmorph.cpp  globalhe.cpp  globalhe.h  magsynth.cpp  magsynth.h  marrhild.cpp  marrhild.h  mask.cpp  mask.h  median.cpp  misc.cpp  misc.h  nop.cpp  nop.h  phsynth.cpp  phsynth.h  plane.cpp  plane.h  register.cpp  register.h  siahe.cpp  siahe2.cpp  sobel.cpp  sobel.h  spectrum.cpp  test.cpp  test.h  (+7 more)
src/oplib/public/oplib/: register.h
src/oplib/test/: AddTest.cpp  GlobalHETest.cpp  NopTest.cpp
src/plugin/: README.md  targets.cmake
src/plugin/main/: Register.cpp
src/plugin/test/: PluginTest.cpp
src/ripl/: riplcmd.cpp  targets.cmake
src/ripl/main/: Op.cpp  Op.h  PluginManager.cpp  PluginManager.h  RegistryImpl.cpp  RegistryImpl.h  main.cpp  plugin_helper.cpp  plugin_helper.h  riplentr.cpp  riplentr.h  riplop.cpp  riplop.h
src/ripl/test/: OpTest.cpp
src/riplcmd/: README.md  info.txt  riplcmd.c  targets.cmake
src/ripllib/: README.md  targets.cmake
src/ripllib/main/: Registry.cpp
src/ripllib/public/ripllib/: ExecuteFunc.h  Registry.h  ripllib-defs.h
src/ripllib/test/: RegistryTest.cpp
src/riplmain/: Error.cpp  Error.h  Image.h  Op.cpp  Op.h  README.md  RIPLALLC.C  RIPLDEFS.H  RIPLFILT.C  RIPLGREY.H  RIPLPBM.C  Ranges.h  RegistryImpl.cpp  RegistryImpl.h  defs.h  ripl.h  riplallc.c  ripldbug.h  ripldefs.h  riplfilt.c  riplfilt.cpp  riplfilt.h  riplgrey.h  riplimg.h  riplmain-defs.h  riplmisc.c  riplmisc.cpp  riplmisc.h  riplmsg.c  riplmsg.h  riplpars.c  riplpars.cpp  riplpars.h  riplpbm.c  riplpbm.cpp  riplpbm.h  riplrgb.c  riplrgb.h  targets.cmake  validate.h
src/riplmain/test/: ImageTest.cpp  NetpbmTest.cpp  data.cpp
src/riplop/: README.md  riplentr.c  riplentr.cpp  riplop.c  riplop.cpp  riplop.h  riplreg.c  riplreg.cpp  targets.cmake
src/riplregistry/: README.md  targets.cmake
src/riplregistry/main/: Registry.cpp
src/riplregistry/public/riplregistry/: HelpFunc.h  Registry.h  defs.h
src/riplregistry/test/: OpFuncTest.cpp  RegistryTest.cpp
src/ripltool/: README.md  RIPLRAND.C  riplfft.c  riplfft.cpp  riplfft.h  riplrand.c  riplrand.cpp  riplrand.h  ripltdfs.h  riplwave.c  riplwave.cpp  riplwave.h  targets.cmake
src/riplwin/: riplwin.c  riplwin.cpp
src/shared/: common.h
src/tcldll/: info.txt  ripl.tcl  ripltran.tcl  tcldll.c  tcldll.h  tclmsg.c
src/test/: AddTest.cpp  ImageTest.cpp  data.cpp  data.h  helper.cpp  main.cpp  targets.cmake
src/testlib/: README.md  targets.cmake
src/testlib/main/: MemoryBuffer.cpp  helper.cpp  logging.cpp
src/testlib/public/testlib/: MemoryBuffer.h  helper.h  logging.h
src/unittest/: README.md  targets.cmake
src/unittest/main/: main.cpp
src/utillib/: README.md  targets.cmake
src/utillib/main/: MemoryBuffer.cpp  OSError.cpp  fs.cpp  string.cpp  validate.h
src/utillib/public/utillib/: OSError.h  ScopedHandle.h  Trie.h  fs.h  string.h  validate.h
src/utillib/test/: ScopedHandleTest.cpp  StringTest.cpp  TrieTest.cpp
src/watcom/: OPLIB.TGT  RIPLDLL.WCL  RIPLMAIN.TGT  RIPLOP.TGT  ripl.wpj
test/: globalhe.cmd  lena.pgm
